nenolod     2005/10/09 00:04:02 UTC	(20051009-2783)
  Log:
  Fix hostsetting on charybdis.

  Changes:	Modified:
  +2 -3		trunk/protocol/charybdis.c (File Modified) 


pfish       2005/10/08 22:55:21 UTC	(20051008-2781)
  Log:
  Fix another error with pgsql memo storage
  

  Changes:	Modified:
  +1 -0		trunk/SQL/atheme_init.sql (File Modified) 


pfish       2005/10/08 22:41:47 UTC	(20051008-2779)
  Log:
  Fix pgsql schema.
  

  Changes:	Modified:
  +1 -1		trunk/SQL/atheme_init.sql (File Modified) 


nenolod     2005/10/08 21:01:27 UTC	(20051008-2777)
  Log:
  WTF was that there for :/

  Changes:	Modified:
  + -		trunk/modules/hostserv/ (File Deleted) 


nenolod     2005/10/08 20:49:21 UTC	(20051008-2775)
  Log:
  Save memos to SQL, fix the infamous MySQL bug -- beu was seeking through the master resultset. :/

  Changes:	Modified:
  +49 -2	trunk/backend/mysql.c (File Modified) 
  +42 -0	trunk/backend/postgresql.c (File Modified) 


nenolod     2005/10/08 20:32:23 UTC	(20051008-2773)
  Log:
  Remove a check here for now.

  Changes:	Modified:
  +0 -12	trunk/modules/nickserv/vhost.c (File Modified) 
  +0 -12	trunk/modules/userserv/vhost.c (File Modified) 


nenolod     2005/10/08 20:28:51 UTC	(20051008-2771)
  Log:
  Add memoserv stuff to SQL schemas.

  Changes:	Modified:
  +21 -0	trunk/SQL/atheme_init.mysql (File Modified) 
  +10 -0	trunk/SQL/atheme_init.sql (File Modified) 


nenolod     2005/10/08 20:21:38 UTC	(20051008-2769)
  Log:
  Save memos to the flatfile database

  Changes:	Modified:
  +35 -0	trunk/backend/flatfile.c (File Modified) 


nenolod     2005/10/08 20:08:06 UTC	(20051008-2767)
  Log:
  Grammar is a good thing. Lets use some.

  Changes:	Modified:
  +1 -2		trunk/modules/memoserv/read.c (File Modified) 


nenolod     2005/10/08 20:04:32 UTC	(20051008-2765)
  Log:
  someone made a mistake here...

  Changes:	Modified:
  +3 -3		trunk/modules/memoserv/list.c (File Modified) 


nenolod     2005/10/08 20:02:35 UTC	(20051008-2763)
  Log: