@@ -4,13 +4,13 @@
  *
  * This file contains protocol support for charybdis-based ircd.
  *
- * $Id: charybdis.c 2783 2005-10-09 00:04:02Z nenolod $
+ * $Id: charybdis.c 2787 2005-10-09 00:27:33Z nenolod $
  */
 
 #include "atheme.h"
 #include "protocol/charybdis.h"
 
-DECLARE_MODULE_V1("protocol/charybdis", TRUE, _modinit, NULL, "$Id: charybdis.c 2783 2005-10-09 00:04:02Z nenolod $", "Atheme Development Group <http://www.atheme.org>");
+DECLARE_MODULE_V1("protocol/charybdis", TRUE, _modinit, NULL, "$Id: charybdis.c 2787 2005-10-09 00:27:33Z nenolod $", "Atheme Development Group <http://www.atheme.org>");
 
 /* *INDENT-OFF* */
 
@@ -384,7 +384,7 @@ static void charybdis_sethost_sts(char *source, char *target, char *host)
 	if (!tu)
 		return;
 
-	sts(":%s ENCAP * CHGHOST %s :%s", ME, CLIENT_NAME(tu),
+	sts(":%s ENCAP * CHGHOST %s :%s", ME, tu->nick,
 		host);
 }
 
